--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -5,7 +5,7 @@ add_executable(main
         )
 
 # pull in common dependencies
-target_link_libraries(main pico_stdlib hardware_uart hardware_pwm)
+target_link_libraries(main pico_stdlib hardware_uart hardware_pwm hardware_adc)
 
 # create map/bin/hex/uf2 file etc.
 pico_add_extra_outputs(main)
